--- a/style.css
+++ b/style.css
@@ -17,11 +17,15 @@ h1 {
   font-size: clamp(3rem, 7vw, 5rem);
 
 }
+p
+{
+    font-size: 1.5rem;
+  |
 
 button {
   background: none;
   border: none;
-  font-size: 1.5rem;
+  font-size: 0.5rem;
   font-weight: bold;
   color: inherit;
   cursor: pointer;
